fixed text on mobile

--- a/_sass/basically-basic/_layout.scss
+++ b/_sass/basically-basic/_layout.scss
@@ -85,7 +85,7 @@ main {
     align-items: center;
   }
 
-  #main {
+  main.entry-content {
     padding: 0 1rem 0 1rem;
     display: flex;
     justify-content: center;
